# test_18022026

./: .env.example  README.md  docker-compose.test.yml  pyproject.toml
scripts/: seed_db.py  show_db.py
src/dbsync/: __init__.py  __main__.py  config.py  database.py  runner.py
tests/: test_runner.py
